--- a/package.json
+++ b/package.json
@@ -6,19 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "studio": "drizzle-kit studio",
+    "db:push": "drizzle-kit push:pg"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.1"
+    "@neondatabase/serverless": "0.9.0",
+    "dotenv": "16.4.5",
+    "drizzle-orm": "0.30.8",
+    "next": "14.2.1",
+    "react": "18",
+    "react-dom": "18"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "@types/node": "20",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "autoprefixer": "10.4.19",
+    "drizzle-kit": "0.20.14",
+    "eslint": "8",
+    "eslint-config-next": "14.2.1",
+    "pg": "8.11.5",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.3",
+    "typescript": "5"
   }
 }
